# Image-Processing-C-Plus-Plus

./: .gitignore  CMakeLists.txt  ImageFilter.cpp  ImageFilter.h  ImageHistogram.cpp  ImageHistogram.h  ImageIO.cpp  ImageIO.h  ImageMorphology.cpp  IntensityTransformations.h  ProjectDescription.docx  main.cpp  ~$ojectDescription.docx
include/: ImageEdgeDetection.h  ImageMorphology.h  ImageUtils.h
src/: ImageFilter.cpp  ImageIO.cpp  ImageMorphology.cpp  IntensityTransformations.cpp  main.cpp
src/include/: ImageIO.h
